--- a/src/app/main/contract-template/dialog/release-contract-template-dialog/release-contract-template-dialog.component.html
+++ b/src/app/main/contract-template/dialog/release-contract-template-dialog/release-contract-template-dialog.component.html
@@ -1,1 +1,13 @@
-<p>release-contract-template-dialog works!</p>
+<div class="container-fluid">
+    <div style="text-align: center; font-weight: bold">
+      <h3 style="color: #106DB6; font-family: inherit;text-transform: uppercase;">{{this.data.title | translate}}</h3>
+    </div>
+    <div style="font-weight: bold">
+        <h3 style="font-family: inherit;">Bạn có chắc chắn muốn phát hành mẫu hợp đồng này không?</h3>
+    </div>
+    <div class="row" style="justify-content: center;padding-top: 10px;">
+        <button class="cancel-button" (click)="dialog.closeAll()" type="button">{{'btn.cancel' | translate}}</button>
+        <button class="save-button" (click)="onSubmit()">{{'btn.save' | translate}}</button>
+    </div>
+</div>
+   
