--- a/src/app/main/contract-template/contract-template.component.html
+++ b/src/app/main/contract-template/contract-template.component.html
@@ -59,13 +59,13 @@
           </div>
 
           <div class="div_icon">
-            <img src="../../assets/img/icon_file.svg" class="img_icon" ngbTooltip="Tạo hợp đồng đơn lẻ" (click)="getDataShare(item.contractName, item.contractCode); open(modalShare)"/>
+            <img src="../../assets/img/icon_file.svg" class="img_icon" ngbTooltip="Tạo hợp đồng đơn lẻ" (click)="shareContractTemplate(item.id)"/>
           </div>
           <div class="div_icon">
-            <img src="../../assets/img/icon_add_connect.svg" class="img_icon" ngbTooltip="Tạo hợp đồng theo lô" (click)="getDataShare(item.contractName, item.contractCode); open(modalShare)"/>
+            <img src="../../assets/img/icon_add_connect.svg" class="img_icon" ngbTooltip="Tạo hợp đồng theo lô" (click)="shareContractTemplate(item.id)"/>
           </div>
           <div class="div_icon">
-            <img src="../../assets/img/icon_share.svg" class="img_icon" ngbTooltip="Chia sẻ" (click)="getDataShare(item.contractName, item.contractCode); open(modalShare)"/>
+            <img src="../../assets/img/icon_share.svg" class="img_icon" ngbTooltip="Chia sẻ" (click)="shareContractTemplate(item.id)"/>
           </div>
           <div class="div_icon">
             <img src="../../assets/img/icon_delete.svg" class="img_icon" ngbTooltip="Xóa hợp đồng" (click)="deleteContractTemplate(item.id);" />
@@ -84,120 +84,3 @@
   </div>
 
 </div>
-
-
-<!-- Popup notification -->
-<ng-template #modalNotifi let-modal >
-  <div class="popup_content">
-    <div class="row">
-      <div class="col-md-10">
-        <h4 class="popup_title">THÔNG BÁO</h4>
-      </div>
-      <div class="col-md-2 popup_close">
-        <span (click)="modal.dismiss('Cross click')">×</span>
-      </div>
-    </div>
-    <hr>
-    <div class="row">
-      <div class="col-md-12">
-          <div class="form-group">
-            <div class="input-group">
-              <p class="alert" role="alert"  [ngClass]="{'alert-danger' : status==0, 'alert-success' : status==1}" style="text-align: center;    width: 100%;">
-              {{notification}}
-            </p>
-            </div>
-          </div>
-      </div>
-    </div>
-    <div class="row" style="text-align: center; padding-top: 10px;">
-      <div class="col-md-12">
-        <button type="button" class="btn btn-outline-dark btn_submit" (click)="modal.dismiss('Cross click');" >Đồng ý</button>
-      </div>
-    </div>
-  </div>
-</ng-template>
- 
-
-<!-- Popup share -->
-<ng-template #modalShare let-modal >
-  <div class="popup_content">
-    <div class="row">
-      <div class="col-md-10">
-        <h4 class="popup_title">CHIA SẺ MẪU HỢP ĐỒNG</h4>
-      </div>
-      <div class="col-md-2 popup_close">
-        <span (click)="modal.dismiss('Cross click')">×</span>
-      </div>
-    </div>
-    <hr>
-
-    <form [formGroup]="shareForm">
-      <div class="row">
-        <div class="col-md-7">
-          <div class="label_item">Tên mẫu hợp đồng</div>
-          <div class="form-input-readonly">
-            <span>{{shareForm.get('name').value}}</span>
-          </div>
-        </div>
-        <div class="col-md-5">
-          <div class="label_item">Mã</div>
-          <div class="form-input-readonly">
-            <span>{{shareForm.get('code').value}}</span>
-          </div>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col-md-12">
-          <div class="label_item">Tổ chức</div>
-          <div class="form-input-line">
-            <ng-multiselect-dropdown formControlName="organization" [placeholder]="'-- Chọn --'"
-              [settings]="dropdownOrganizationSettings" [data]="organizationList">
-              <ng-template #optionsTemplate let-item let-option="option" let-id="id" let-isSelected="isSelected">
-                <div style="padding: 1px 10px; margin-right: 10px; right: 2px; top: -2px;">
-                  <label style="color: #333; font-weight: normal;"
-                    [ngStyle]="{ 'font-weight': isSelected? 'bold':' normal','color': getOrganizationItems[id].isDisabled? 'lightgrey': ''}">{{getOrganizationItems[id].item_text}}
-                  </label>
-                </div>
-              </ng-template>
-            </ng-multiselect-dropdown>
-          </div>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col-md-12">
-          <div class="label_item">Email</div>
-          <div class="form-input-line">
-            <ng-multiselect-dropdown formControlName="email" [placeholder]="'-- Chọn --'"
-              [settings]="dropdownEmailSettings" [data]="emailList">
-              <ng-template #optionsTemplate let-item let-option="option" let-id="id" let-isSelected="isSelected">
-                <div style="padding: 1px 10px; margin-right: 10px; right: 2px; top: -2px;">
-                  <label style="color: #333; font-weight: normal;"
-                    [ngStyle]="{ 'font-weight': isSelected? 'bold':' normal','color': getEmailItems[id].isDisabled? 'lightgrey': ''}">{{getEmailItems[id].item_text}}
-                  </label>
-                </div>
-              </ng-template>
-            </ng-multiselect-dropdown>
-          </div>
-        </div>
-      </div>
-
-      <div class="row" style="padding-top: 10px;">
-        <div class="col-md-1"></div>
-        <div class="col-md-10">
-          <p class="alert alert-danger" role="alert" *ngIf="error" style="text-align: center; font-size: 15px;">
-            <strong>{{errorDetail}}</strong>
-          </p>
-        </div>
-        <div class="col-md-1"></div>
-      </div>
-      <div class="row" style="text-align: center; padding-top: 10px;">
-        <div class="col-md-12">
-          <button type="button" class="btn btn-outline-dark btn_close" (click)="modal.close('Save click')">Hủy bỏ</button>
-          <button type="button" class="btn btn-outline-dark btn_submit" (click)="sendShare(); error ? false : modal.close('Save click');">Chia sẻ</button>
-        </div>
-      </div>
-    </form>
-  </div>
-</ng-template>
