--- a/src/app/main/dashboard/dashboard.component.html
+++ b/src/app/main/dashboard/dashboard.component.html
@@ -87,7 +87,7 @@
             </div>
             <div *ngIf="totalCreate > 0" >
               <div [chart]="chartCreated"></div>
-              <div style="text-align: center;">{{'chart.contract.received' | translate}}</div>
+              <div style="text-align: center;">{{'chart.contract.created' | translate}}</div>
             </div>
           </div>
         </div>
