--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -298,6 +298,11 @@ h3{
 :host ::ng-deep {
   .p-badge {
     background: red;
+    font-size: 9px !important;
+    padding: 5px !important;
+    height: 1.2rem !important;
+    line-height: 0.5rem !important;
+    min-width: 1.2rem !important;
   }
 }
 .pi-bell{
