--- a/src/app/action-device/action-device.component.html
+++ b/src/app/action-device/action-device.component.html
@@ -13,7 +13,7 @@
       <button class="footer-btn" (click)="nextApp()">
         <img src="assets/img/Group 5478.svg" alt="eContract">Mở app
       </button>
-      <button class="footer-btn"><img src="assets/img/download_app.svg" alt="eContract">Tải app</button>
+      <button class="footer-btn" (click)="downloadApp()"><img src="assets/img/download_app.svg" alt="eContract">Tải app</button>
     </div>
   </div>
 </div>
