edit code copy right

--- a/src/app/main/contract-signature/components/contract-coordination/shared/model/determine-signer/determine-signer.component.html
+++ b/src/app/main/contract-signature/components/contract-coordination/shared/model/determine-signer/determine-signer.component.html
@@ -516,7 +516,7 @@
             style="background-color: #8B8B8B">{{'btn.previous' | translate}}
     </button>
   </div>
-  <div class="content_footer">@Copyright 2021 - MobiFone</div>
+<!--  <div class="content_footer">@Copyright 2021 - MobiFone</div>-->
   <div>
     <!--    <button type="button" name="next" class="next draft-button">{{'btn.save-draff' | translate }}</button>-->
     <button (click)="next()" type="button" name="next"
