--- a/src/app/main/contract/shared/model/infor-contract/infor-contract.component.scss
+++ b/src/app/main/contract/shared/model/infor-contract/infor-contract.component.scss
@@ -132,7 +132,7 @@ button {
 
 .footer-infor-contract {
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-end;
   align-items: center;
   .content_footer{
     //text-align: center;
