--- a/src/app/main/contract/shared/model/determine-signer/determine-signer.component.html
+++ b/src/app/main/contract/shared/model/determine-signer/determine-signer.component.html
@@ -556,10 +556,9 @@
             style="background-color: #8B8B8B">{{'btn.previous' | translate}}
     </button>
   </div>
-  <div class="content_footer">@Copyright 2021 - MobiFone</div>
   <div>
-    <button type="button" name="next" class="next draft-button">{{'btn.save-draff' | translate }}</button>
-    <button (click)="next()" type="button" name="next"
+    <button type="button" name="next" class="next draft-button" (click)="next('save-draft')">{{'btn.save-draff' | translate }}</button>
+    <button (click)="next('save-step')" type="button" name="next"
             class="next action-button pull-right">{{'btn.next' | translate }}</button>
   </div>
 </div>
