--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,6 +1,6 @@
 <div class="page-wrapper" [ngClass]="{'toggled' : getSideBarState()}">
   <app-sidebar *ngIf="getShowHideSideBar()" (evenSelectSidebar)="getName($event)"></app-sidebar>
-  <main class="page-content" [ngStyle]="getStyleWithSideBar()" [style.padding-bottom]="this.isShowCopyRight && this.isRouterContractNew ? '25px' : ''">
+  <main class="page-content" [ngStyle]="getStyleWithSideBar()" [style.padding-bottom]="this.getCheckCopyRight() ? '25px' : ''">
 <!--    style="padding-bottom: 25px;"-->
       <header [ngStyle]="getStyleSideBar()">
         <div class="search-wrapper">
@@ -31,7 +31,7 @@
                     <img src="../../../assets/img/calendar_icon.svg" width="15px"/>
                     <span class="item_date"> {{item.notice_date | date: 'dd/MM/yyyy HH:mm'}}</span>
                   </div>
-                  
+
                   <div class="col-md-6 item_contract_infor">{{'contract.status' | translate}}:
                     <span class="status_blue" *ngIf="item.message_code=='sign_flow_coordinator'">Điều phối</span>
                     <span class="status_blue" *ngIf="item.message_code=='sign_flow_reject'">Từ chối</span>
@@ -41,10 +41,10 @@
                     <span class="status_blue" *ngIf="item.message_code=='sign_flow_finish'">Hoàn thành</span>
                     <span class="status_blue" *ngIf="item.message_code=='sign_flow_cancel'">Hủy</span>
                   </div>
-              
+
                 </div>
               </div>
-              <div  class="view_all"> 
+              <div  class="view_all">
                 Xem thêm
               </div>
             </div>
@@ -58,20 +58,20 @@
 
             <div ngbDropdownMenu aria-labelledby="dropdownBasic1" class="drop_menu">
               <button ngbDropdownItem class="drop">
-                <a href="/assets/upload/eContract_Web_Manual.docx" style="color: inherit; text-decoration: none;"> 
+                <a href="/assets/upload/eContract_Web_Manual.docx" style="color: inherit; text-decoration: none;">
                 <div style="display: flex; align-items: center;">
                   <div class="db_user">
-                    <div class="db_document_use"></div> 
+                    <div class="db_document_use"></div>
                   </div>
                   <div>{{'document.user.use' | translate }}</div></div>
                 </a>
               </button>
 
               <button ngbDropdownItem class="drop">
-                <a href="/assets/upload/mobi_pki_sign_setup.zip" style="color: inherit; text-decoration: none;"> 
+                <a href="/assets/upload/mobi_pki_sign_setup.zip" style="color: inherit; text-decoration: none;">
                 <div style="display: flex; align-items: center;">
                   <div class="db_user">
-                    <div class="db_document_use"></div> 
+                    <div class="db_document_use"></div>
                   </div>
                   <div>{{'document.plugin.pki' | translate }}</div></div>
                 </a>
@@ -111,7 +111,7 @@
               </button>
             </div>
           </div>
-          
+
           </div>
       </header>
 
@@ -119,17 +119,16 @@
         <div class="row">
           <div class="form-group col-md-12">
             <router-outlet></router-outlet>
-            
+
           </div>
         </div>
-        
+
       </div>
-      <div *ngIf="this.isShowCopyRight && this.isRouterContractNew" class="content_footer">
+<!--    *ngIf="this.isShowCopyRight && this.isRouterContractNew"-->
+      <div *ngIf="getCheckCopyRight()" class="content_footer">
         <div>@Copyright 2021 - MobiFone</div>
       </div>
-
   </main>
-  
 </div>
 
 
