--- a/src/app/main/contract-signature/components/consider-contract/consider-contract.component.html
+++ b/src/app/main/contract-signature/components/consider-contract/consider-contract.component.html
@@ -6,7 +6,7 @@
       <div style="line-height: 25px">
         <div>
           <span class="title-contract">Loại hợp đồng:</span>
-          <span>{{datas.is_data_contract.type_id}}</span>
+          <span>{{datas?.is_data_contract?.type_name}}</span>
         </div>
         <div>
           <span class="title-contract">Tên hợp đồng:</span>
