edit login full screen

--- a/src/app/login/forgot-password/forgot-password.component.html
+++ b/src/app/login/forgot-password/forgot-password.component.html
@@ -1,4 +1,4 @@
-<body>
+<!-- <body>
   <div class="container">
     <div class="row">
       <div class="col-md-6">
@@ -67,4 +67,67 @@
       </div>
     </div>
   </div>
-</body>
+</body> -->
+<div style="background-color: #f9f9f9;">
+  <div class="full-height d-flex flex-row">
+    <div class="left-background">
+
+    </div>
+    <div class="right-panel">
+      <div ngbDropdown class="d-inline-block header_language">
+        <div class="social-icons" ngbDropdownToggle>
+          <span class="{{'language_icon' | translate }}"></span>
+          <div class="label">{{'language' | translate }}</div>
+        </div>
+
+        <div ngbDropdownMenu aria-labelledby="dropdownBasic1" class="drop_menu">
+          <button ngbDropdownItem class="drop" (click)="switchLang('en')">
+            <div style="display: flex; align-items: center;">
+              <div class="db_user">
+                <div class="db_icon_english"></div>
+              </div>
+              <div>{{'language_en' | translate }}</div></div>
+          </button>
+          <button ngbDropdownItem class="drop" (click)="switchLang('vi')">
+            <div style="display: flex; align-items: center;">
+              <div class="db_user">
+                <div class="db_icon_vietnam"></div>
+              </div>
+              <div>{{'language_vi' | translate }}</div></div>
+          </button>
+        </div>
+      </div>
+      <div class="small-logo d-flex flex-column justify-content-center">
+        <div>
+          <img src="../../assets/img/logo_eContract_21.svg" width="300px"/>
+        </div>
+      </div>
+      <div class="input-form ng-touched ng-pristine ng-invalid">
+        <form class="form-signin" [formGroup]="forgotPasswordForm">
+          <div class="header-label">{{'login.forgot_password' | translate }}</div>
+          <div class="header-infor">{{'login.forgot_password.note' | translate }}</div>
+
+          <div class="form-group">
+            <div class="input-line">
+              <img src="../../../assets/img/login_email.svg" class="input-img">
+              <input type="text" id="email" formControlName="email" class="input-text" placeholder="{{'user.email' | translate}}"/>
+            </div>
+          </div>
+
+          <div class="form-group">
+            <p class="alert alert-danger" role="alert" *ngIf="error" style="text-align: center;">
+              <strong>{{errorDetail}}</strong>
+            </p>
+          </div>
+
+          <div class="form-group" style="text-align: center;">
+            <button (click)="sendForgetPassword()" class="btn btn-lg btn-block" style="background-color: #106DB6; color: white;">{{'btn.sendRequest' | translate}}</button>
+          </div>
+        </form>
+      </div>
+      <div class="slogan">
+        <div class="bg-footer-login"></div>
+      </div>
+    </div>
+  </div>
+</div>
