--- a/src/app/login/signup/signup.component.html
+++ b/src/app/login/signup/signup.component.html
@@ -1,4 +1,4 @@
-
+<!-- 
 <body>
   <div class="container">
     <div class="row">
@@ -123,11 +123,11 @@
                 </div>
               </div>
 
-              <!-- <div class="form-group">
+              <div class="form-group">
                 <p class="alert alert-danger" role="alert" *ngIf="error" style="text-align: center; font-size: 15px;">
                   <strong>{{errorDetail}}</strong>
                 </p>
-              </div> -->
+              </div>
 
               <div class="form-group sub-login" style="width: 60%;margin: 0 auto;">
                 <button class="btn btn-lg btn-block" (click)="sendSignup()">{{'btn.sendRequest' | translate}}</button>
@@ -143,4 +143,144 @@
       </div>
     </div>
   </div>
-</body>
+</body> -->
+<div style="background-color: #f9f9f9;">
+  <div class="full-height d-flex flex-row">
+    <div class="left-background">
+
+    </div>
+    <div class="right-panel">
+      <div ngbDropdown class="d-inline-block header_language">
+        <div class="social-icons" ngbDropdownToggle>
+          <span class="{{'language_icon' | translate }}"></span>
+          <div class="label">{{'language' | translate }}</div>
+        </div>
+  
+        <div ngbDropdownMenu aria-labelledby="dropdownBasic1" class="drop_menu">
+          <button ngbDropdownItem class="drop" (click)="switchLang('en')">
+            <div style="display: flex; align-items: center;">
+              <div class="db_user">
+                <div class="db_icon_english"></div>
+              </div>
+              <div>{{'language_en' | translate }}</div></div>
+          </button>
+          <button ngbDropdownItem class="drop" (click)="switchLang('vi')">
+            <div style="display: flex; align-items: center;">
+              <div class="db_user">
+                <div class="db_icon_vietnam"></div>
+              </div>
+              <div>{{'language_vi' | translate }}</div></div>
+          </button>
+        </div>
+      </div>
+      <div class="small-logo d-flex flex-column justify-content-center">
+        <div>
+          <img src="../../assets/img/logo_eContract_21.svg" width="300px"/>
+        </div>
+      </div>
+      <div class="input-form ng-touched ng-pristine ng-invalid">
+        <form [formGroup]="signupForm">
+          <div style="margin: 0 30px;color:#106DB6; font-size: 30px;">{{'signup' | translate}}</div>
+          <div class="form-group">
+            <div class="row">
+              <div class="col-md-6">
+                <div class="form-group">
+                  <div class="input-line">
+                    <img src="../../assets/img/login_user.svg" class="input-img">
+                    <input type="text" id="username" placeholder="{{'organization' | translate}}"
+                      formControlName="username" class="input-text"/>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="form-group">
+                  <div class="input-line">
+                    <img src="../../assets/img/icon_edit.svg" class="input-img">
+                    <input type="text" id="username" placeholder="{{'scale' | translate}}"
+                      formControlName="username" class="input-text"/>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col-md-6">
+                <div class="form-group">
+                  <div class="input-line">
+                    <img src="../../assets/img/icon_edit.svg" class="input-img">
+                    <input type="text" id="username" placeholder="{{'address' | translate}}"
+                      formControlName="username" class="input-text"/>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="form-group">
+                  <div class="input-line">
+                    <img src="../../assets/img/icon_edit.svg" class="input-img">
+                    <input type="text" id="username" placeholder="{{'tax_code' | translate}}"
+                      formControlName="username" class="input-text"/>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col-md-6">
+                <div class="form-group">
+                  <div class="input-line">
+                    <img src="../../assets/img/icon_edit.svg" class="input-img">
+                    <input type="text" id="username" placeholder="{{'representative' | translate}}"
+                      formControlName="username" class="input-text"/>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="form-group">
+                  <div class="input-line">
+                    <img src="../../assets/img/icon_edit.svg" class="input-img">
+                    <input type="text" id="username" placeholder="{{'position' | translate}}"
+                      formControlName="username" class="input-text"/>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col-md-6">
+                <div class="form-group">
+                  <div class="input-line">
+                    <img src="../../assets/img/login_email.svg" class="input-img">
+                    <input type="text" id="username" placeholder="{{'user.email' | translate}}"
+                      formControlName="username" class="input-text"/>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="form-group">
+                  <div class="input-line">
+                    <img src="../../assets/img/icon_edit.svg" class="input-img">
+                    <input type="text" id="username" placeholder="{{'user.phone' | translate}}"
+                      formControlName="username" class="input-text"/>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="form-group">
+              <p class="alert alert-danger" role="alert" *ngIf="error" style="text-align: center; font-size: 15px;">
+                <strong>{{errorDetail}}</strong>
+              </p>
+            </div>
+
+            <div class="form-group sub-login" style="width: 60%;margin: 0 auto;">
+              <button class="btn btn-lg btn-block" (click)="sendSignup()">{{'btn.sendRequest' | translate}}</button>
+            </div>
+            </div>
+        </form>
+      </div>
+      <div class="slogan">
+        <div class="bg-footer-login"></div>
+      </div>
+    </div>
+  </div>
+</div>
