--- a/src/app/main/contract-signature/components/consider-contract/image-sign-contract/image-sign-contract.component.html
+++ b/src/app/main/contract-signature/components/consider-contract/image-sign-contract/image-sign-contract.component.html
@@ -7,7 +7,9 @@
     <img [src]="sign.sign_unit == 'chu_ky_anh' ? 'assets/img/img_drag.svg' : 'assets/img/img_sign_number.svg'" alt="mobifone.contract">
   </div>
   <div *ngIf="sign.valueSign" (click)="doSign()">
-    <img [src]="sign.valueSign" alt="mobifone.contract" width="100px" height="54px">
+    <img [src]="sign.valueSign" alt="mobifone.contract" 
+    [width]="sign.width ? sign.width : '100px'" 
+    [height]="sign.height ? sign.height : '54px'">
   </div>
 
 </div>
