--- a/src/app/main/contract/shared/model/infor-contract/infor-contract.component.html
+++ b/src/app/main/contract/shared/model/infor-contract/infor-contract.component.html
@@ -17,7 +17,7 @@
       <div class="form-group">
         <div class="label_item">{{'contract.name' | translate}} <span class="require_star">*</span></div>
         <div class="input-group">
-          <input #nameContract type="text" [(ngModel)]="name" class="input_text" />
+          <input #nameContract type="text" [(ngModel)]="name" class="input_text" (keyup)="contractNameRequired(); contractNameCounter()"/>
         </div>
       </div>
       <div class="form-group">
@@ -51,10 +51,16 @@
       <div class="form-group">
         <div class="label_item">{{'contract.number' | translate}}</div>
         <div class="input-group">
-          <input type="text" [(ngModel)]="code" class="input_text"/>
+          <input type="text" [(ngModel)]="code" class="input_text" (keyup)="contractNumberCounter()"/>
+        </div>  
+      </div>
+      <div class="form-group">
+        <div class="invalid" *ngIf="errorContractNumber!=''">
+          {{errorContractNumber | translate}}
         </div>
       </div>
     </div>
+    
     <div class="col-md-2"></div>
     <div class="col-md-5">
       <div class="form-group">
