--- a/src/app/main/contract/shared/model/infor-contract/infor-contract.component.html
+++ b/src/app/main/contract/shared/model/infor-contract/infor-contract.component.html
@@ -51,7 +51,7 @@
       <div class="form-group">
         <div class="label_item">{{'contract.number' | translate}}</div>
         <div class="input-group">
-          <input type="text" [(ngModel)]="code" class="input_text" (keyup)="contractNumberCounter()"/>
+          <input type="text" [(ngModel)]="code" class="input_text" (keyup)="contractNumberValid()"/>
         </div>  
       </div>
       <div class="form-group">
