--- a/src/app/main/role/detail-role/detail-role.component.html
+++ b/src/app/main/role/detail-role/detail-role.component.html
@@ -52,7 +52,7 @@
         </div>
     
         <div class="row" style="justify-content: center;padding-top: 10px;">
-            <button class="cancel-button" (click)="dialog.closeAll()" type="button">{{'btn.cancel' | translate}}</button>
+            <button class="cancel-button" (click)="dialog.closeAll()" type="button">{{'btn.close' | translate}}</button>
         </div>
     </div>
   </div>
