--- a/src/app/main/user/detail-user/detail-user.component.html
+++ b/src/app/main/user/detail-user/detail-user.component.html
@@ -120,7 +120,7 @@
     </div>
 
     <div class="row" style="justify-content: center;padding-top: 10px;">
-        <button class="cancel-button" (click)="onCancel()"  type="button">{{'btn.cancel' | translate}}</button>
+        <button class="cancel-button" (click)="onCancel()"  type="button">{{'btn.close' | translate}}</button>
     </div>
 </div>
 </div>
