--- a/src/app/main/contract/contract.component.html
+++ b/src/app/main/contract/contract.component.html
@@ -64,9 +64,12 @@
           <div class="div_icon" *ngIf="(status == 'processing' || status == 'expire' || status == 'complete') && isQLHD_12">
             <img src="../../assets/img/icon_view_connect.svg" class="img_icon" ngbTooltip="{{'contract.connect.view' | translate}}" (click)="contractConnect(item.id)"/>
           </div>
-          <!-- <div class="div_icon" *ngIf="status == 'processing' || status == 'expire' || status == 'complete'">
+          <!-- <div class="div_icon" *ngIf="status == 'processing' || status == 'expire'">
             <img src="../../assets/img/icon_add_connect.svg" class="img_icon" ngbTooltip="{{'contract.connect.add' | translate}}" (click)="addContractConnect(item.id)"/>
           </div> -->
+          <div class="div_icon" *ngIf="status == 'complete'">
+            <img src="../../assets/img/icon_add_connect.svg" class="img_icon" ngbTooltip="{{'contract.connect.add' | translate}}" (click)="addContractConnectNew(item.id)"/>
+          </div>
           <div class="div_icon" *ngIf="(status == 'processing' || status == 'expire') && isQLHD_09">
             <img src="../../assets/img/icon_stop.svg" class="img_icon" ngbTooltip="{{'contract.cancel' | translate}}" (click)="cancelContract(item.id);"/>
           </div>
