--- a/src/app/main/sidebar/sidebar.component.scss
+++ b/src/app/main/sidebar/sidebar.component.scss
@@ -463,6 +463,7 @@ $img-shadow-color:rgba(0, 0, 0, 0.5);
   .sidebar-menu ul li:hover>a,
   .sidebar-menu .active>a,
   .sidebar-menu .sidebar-dropdown.active>a,
+  .sidebar-menu .sidebar-dropdown-active>a,
   .sidebar-profile .user-info,
   .sidebar-footer>div>a:hover i,
   #close-sidebar:hover {
