--- a/src/app/main/sidebar/sidebar.component.html
+++ b/src/app/main/sidebar/sidebar.component.html
@@ -2,14 +2,14 @@
   <div class="sidebar-content">
     <perfect-scrollbar>
       <div class="sidebar-header">
-        <a href="/main/dashboard">
+        <a (click)="openDashboard()">
           <img src="assets/img/logo_eContract_21.svg" alt="Logo" class="img-responsive" width="185px" height="auto" />
         </a>
       </div>
 
       <div class="sidebar-menu">
         <ul>
-          <li *ngFor="let menu of menus" [ngClass]="{'active':menu.active , 'sidebar-dropdown':menu.type === 'dropdown' , 'header-menu':menu.type === 'header'}">
+          <li *ngFor="let menu of menus" [ngClass]="{'active': menu.active, 'sidebar-dropdown':menu.type === 'dropdown', 'sidebar-dropdown-active':menu.type === 'dropdown' && menu.activeDrop , 'header-menu':menu.type === 'header'}">
             <span *ngIf="menu.type === 'header'">{{menu.title | translate}}</span>
             <!-- Menu parent, click dropdown -->
             <a *ngIf="menu.href === '#'" (click)='toggle(menu)'>
