--- a/src/app/main/contract-signature/components/contract-coordination/shared/model/infor-contract/infor-contract.component.html
+++ b/src/app/main/contract-signature/components/contract-coordination/shared/model/infor-contract/infor-contract.component.html
@@ -138,7 +138,7 @@
 
 <div class="footer-infor-contract">
   <div style="width: 200px;"></div>
-  <div class="content_footer">@Copyright 2021 - MobiFone</div>
+<!--  <div class="content_footer">@Copyright 2021 - MobiFone</div>-->
   <div>
 <!--    <button type="button" name="next" class="next draft-button">{{'btn.save-draff' | translate }}</button>-->
     <button (click)="next()" type="button" name="next" class="next action-button pull-right">{{'btn.next' | translate }}</button>
