--- a/src/app/main/contract/detail-contract/detail-contract.component.html
+++ b/src/app/main/contract/detail-contract/detail-contract.component.html
@@ -69,7 +69,7 @@
   </div>
 </div>
 <div class="footer-contract">
-  <div class="content_footer">@Copyright 2021 - MobiFone</div>
+<!--  <div class="content_footer">@Copyright 2021 - MobiFone</div>-->
   <div class="btn_footer">
     <div class="label">
     </div>
