--- a/src/app/main/contract-signature/components/footer-signature/footer-signature.component.html
+++ b/src/app/main/contract-signature/components/footer-signature/footer-signature.component.html
@@ -1,5 +1,5 @@
 <div class="footer-contract">
-  <div class="content_footer">@Copyright 2021 - MobiFone</div>
+<!--  <div class="content_footer">@Copyright 2021 - MobiFone</div>-->
   <div class="btn_footer">
     <div class="label">
 <!--      !this.datas.coordination_complete && !view-->
