--- a/src/app/main/contract-type/delete-contract-type/delete-contract-type.component.html
+++ b/src/app/main/contract-type/delete-contract-type/delete-contract-type.component.html
@@ -7,7 +7,7 @@
     </div>
     <div class="row" style="justify-content: center;padding-top: 10px;">
         <button class="cancel-button" (click)="dialog.closeAll()" type="button">{{'btn.cancel' | translate}}</button>
-        <button class="save-button" (click)="onSubmit()">{{'btn.save' | translate}}</button>
+        <button class="save-button" (click)="onSubmit()">{{'btn.delete' | translate}}</button>
     </div>
 </div>
    
