--- a/src/app/main/unit/add-unit/add-unit.component.html
+++ b/src/app/main/unit/add-unit/add-unit.component.html
@@ -39,7 +39,7 @@
             <div class="col-md-6">
                 <div class="label text-color">{{'unit.email' | translate }} <span class="required-title">*</span></div>
                 <div class="input-data">
-                    <input type="text" formControlName="email">
+                    <input type="text" formControlName="email" [readonly]="this.data.id != null">
                 </div>
                 <div *ngIf="submitted && f.email.errors" class="invalid">
                     <div *ngIf="f.email.errors.required">Email không được để trống</div>
@@ -64,7 +64,8 @@
                         filterBy="name" 
                         [showClear]="true"  
                         [showClear]="this.data.id != null?false:true"
-                        [readonly]="this.data.id != null"  
+                        [readonly]="this.data.id != null" 
+                        dropdownIcon="pi pi-chevron-down" 
                         ></p-dropdown>
                 </div>
                 <div *ngIf="submitted && f.parent_id.errors" class="invalid">
@@ -75,7 +76,7 @@
             <div class="col-md-6">
                 <div class="label text-color">{{'unit.phone' | translate }} <span class="required-title">*</span></div>
                 <div class="input-data">
-                    <input type="text" formControlName="phone">
+                    <input type="text" formControlName="phone" [readonly]="this.data.id != null">
                 </div>
                 <div *ngIf="submitted && f.phone.errors" class="invalid">
                     <div *ngIf="f.phone.errors.required">Số điện thoại không được để trống</div>
