--- a/src/app/main/user/user.component.html
+++ b/src/app/main/user/user.component.html
@@ -44,7 +44,7 @@
               <td>{{list.status==1?'Hoạt động':'Không hoạt động'}}</td>
               <td>{{list.role?.name}}</td>
               <td style="text-align: center">
-                <img *ngIf="isQLND_02" src="../../../assets/img/icon_edit.svg" width="20px" (click)="editUser(list.id)" style="cursor: pointer;"/>
+                <img *ngIf="isQLND_02 && list.organization_id == this.organization_id_user_login" src="../../../assets/img/icon_edit.svg" width="20px" (click)="editUser(list.id)" style="cursor: pointer;"/>
               </td>
           </tr>
       </ng-template>
