fix search role

--- a/src/app/main/contract-type/add-contract-type/add-contract-type.component.html
+++ b/src/app/main/contract-type/add-contract-type/add-contract-type.component.html
@@ -29,7 +29,7 @@
     
         <div class="row" style="justify-content: center;padding-top: 10px;">
             <button class="cancel-button" (click)="dialog.closeAll()" type="button">{{'btn.cancel' | translate}}</button>
-            <button class="save-button">{{'btn.update' | translate}}</button>
+            <button class="save-button">{{'btn.save' | translate}}</button>
         </div>
     </form>
   </div>
