--- a/src/app/main/contract-type/add-contract-type/add-contract-type.component.scss
+++ b/src/app/main/contract-type/add-contract-type/add-contract-type.component.scss
@@ -16,6 +16,7 @@
     > input {
         border: none;
         outline: none;
+        border-radius: 5px;
         padding: 5px 10px;
         width: 100%;
     }
