--- a/src/app/main/user/infor-user/infor-user.component.html
+++ b/src/app/main/user/infor-user/infor-user.component.html
@@ -63,7 +63,7 @@
         </div> 
       </div>
       <div class="col-md-4">
-      <div class="label text-color">Vai trò <span class="required-title">*</span></div>
+      <div class="label text-color">{{'menu.role.list' | translate}} <span class="required-title">*</span></div>
       <div class="input-data hidden-color">
         <input type="text" formControlName="roleName" [readonly]="true" class="hidden-color">
         <!-- <p-dropdown 
